[gd_scene load_steps=21 format=3 uid="uid://blt13d8uevmm"]

[ext_resource type="Script" path="res://Scripts/Bullets/ricochet_bullet.gd" id="1_03oqu"]
[ext_resource type="Texture2D" uid="uid://buodxi47dnrum" path="res://Sprites/Bullets/Bullet1.png" id="2_gw8jr"]
[ext_resource type="Texture2D" uid="uid://dnbosgnmca2hh" path="res://Sprites/Bullets/Bullet2.png" id="3_ntac4"]
[ext_resource type="Texture2D" uid="uid://3ddnxsusyhfi" path="res://Sprites/Bullets/Bullet3.png" id="4_2tck6"]
[ext_resource type="Texture2D" uid="uid://gofaabkc1fye" path="res://Sprites/Bullets/Bullet4.png" id="5_yswpl"]
[ext_resource type="Texture2D" uid="uid://vvnimsyeyy2q" path="res://Sprites/Bullets/Bullet5.png" id="6_ycmla"]
[ext_resource type="Texture2D" uid="uid://dkrtwqwcpxk3o" path="res://Sprites/Bullets/Bullet6.png" id="7_gns28"]
[ext_resource type="Texture2D" uid="uid://cqgotutnbentn" path="res://Sprites/Bullets/Bullet7.png" id="8_iytls"]
[ext_resource type="Texture2D" uid="uid://dl03ttlb24ada" path="res://Sprites/Explosion/explosion1.png" id="9_sd18t"]
[ext_resource type="Texture2D" uid="uid://dt4xoaxgrgijr" path="res://Sprites/Explosion/explosion2.png" id="10_jrw6g"]
[ext_resource type="Texture2D" uid="uid://b5gger2f4230r" path="res://Sprites/Explosion/explosion3.png" id="11_ic5jv"]
[ext_resource type="Texture2D" uid="uid://bodebyb4vgk07" path="res://Sprites/Explosion/explosion4.png" id="12_lam5l"]
[ext_resource type="Texture2D" uid="uid://biskv30bbbw7q" path="res://Sprites/Explosion/explosion5.png" id="13_412rx"]
[ext_resource type="Texture2D" uid="uid://cb2clutnd13pb" path="res://Sprites/Explosion/explosion6.png" id="14_6gx11"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_u3ar8"]
radius = 4.4308
height = 8.86159

[sub_resource type="SpriteFrames" id="SpriteFrames_telk8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gw8jr")
}, {
"duration": 1.0,
"texture": ExtResource("3_ntac4")
}, {
"duration": 1.0,
"texture": ExtResource("4_2tck6")
}, {
"duration": 1.0,
"texture": ExtResource("5_yswpl")
}, {
"duration": 1.0,
"texture": ExtResource("6_ycmla")
}, {
"duration": 1.0,
"texture": ExtResource("7_gns28")
}, {
"duration": 1.0,
"texture": ExtResource("8_iytls")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_dv2qf"]
resource_name = "explosion"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ExplosionSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_20f2r"]
_data = {
"explosion": SubResource("Animation_dv2qf")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_h6n0d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_sd18t")
}, {
"duration": 1.0,
"texture": ExtResource("10_jrw6g")
}, {
"duration": 1.0,
"texture": ExtResource("11_ic5jv")
}, {
"duration": 1.0,
"texture": ExtResource("12_lam5l")
}, {
"duration": 1.0,
"texture": ExtResource("13_412rx")
}, {
"duration": 1.0,
"texture": ExtResource("14_6gx11")
}],
"loop": false,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o73pb"]
size = Vector2(12, 15)

[node name="Bullet" type="Area2D"]
rotation = 1.5708
collision_layer = 2
collision_mask = 2
script = ExtResource("1_03oqu")

[node name="BulletHitbox" type="CollisionShape2D" parent="."]
position = Vector2(2.19345e-05, -0.19981)
scale = Vector2(0.880001, 1.44)
shape = SubResource("CapsuleShape2D_u3ar8")
disabled = true

[node name="BulletCast" type="RayCast2D" parent="."]
position = Vector2(-6.19888e-05, 0.0881703)
scale = Vector2(0.667571, 1.85699)
target_position = Vector2(0, 19.2169)
collide_with_areas = true

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="BulletSprite" type="AnimatedSprite2D" parent="."]
rotation = 1.57079
sprite_frames = SubResource("SpriteFrames_telk8")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_20f2r")
}

[node name="ExplosionSprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0, 0, 0, 0.176471)
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_h6n0d")
frame = 5
frame_progress = 1.0

[node name="RicochetSoundPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = -15.0
pitch_scale = 0.6
max_polyphony = 5
bus = &"SoundEffects"

[node name="WallCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallCheck"]
position = Vector2(3.62396e-05, 10)
scale = Vector2(0.76, 0.759999)
shape = SubResource("RectangleShape2D_o73pb")
one_way_collision_margin = 0.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
[connection signal="animation_finished" from="ExplosionSprite" to="." method="_on_explosion_sprite_animation_finished"]
[connection signal="body_entered" from="WallCheck" to="." method="_on_wall_check_body_entered"]
